--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,51 @@
-@media (min-width: 480px) {
+@media (max-width: 1280px) {
+}
+
+@media (max-width: 1024px) {
+  /* --------------------- sidebar --------------------- */
+  .sidebar {
+    width: 80px;
+    overflow-y: visible;
+  }
+  /* #1 icon & logo */
+  .sidebar .container .logo {
+    justify-content: center;
+    gap: 0;
+  }
+  .sidebar .container .logo h1,
+  .sidebar .container .logo span {
+    display: none;
+  }
+  /* #2 navbar */
+  .sidebar nav {
+    margin-bottom: 16px;
+  }
+  .sidebar nav ul li {
+    justify-content: center;
+  }
+  .sidebar nav ul li span {
+    display: none;
+  }
+  /* #3 quick-actions */
+  .quick-actions h3 {
+    display: none;
+  }
+  .quick-actions ul li {
+    padding: 8px;
+    justify-content: center;
+  }
+  .quick-actions ul li span {
+    display: none;
+  }
+  /* --------------------------------------------------------------- */
+  /* --------------------- finance-manager --------------------- */
+  main {
+    width: calc(100% - 80px);
+  }
+  /* --------------------- header --------------------- */
+}
+
+@media (max-width: 768px) {
   .sidebar {
     display: none;
   }
@@ -6,6 +53,9 @@
   main {
     width: 100%;
   }
+}
+
+@media (max-width: 568px) {
   /* --------------------- header --------------------- */
   header .container {
     padding: 16px;
@@ -33,102 +83,5 @@
   }
 }
 
-@media (min-width: 568px) {
-}
-
-@media (min-width: 768px) {
-  /* --------------------- sidebar --------------------- */
-  .sidebar {
-    display: block;
-    width: 80px;
-    overflow-y: visible;
-  }
-  /* #1 icon & logo */
-  .sidebar .container .logo {
-    justify-content: center;
-    gap: 0;
-  }
-  .sidebar .container .logo h1,
-  .sidebar .container .logo span {
-    display: none;
-  }
-
-  /* #2 navbar */
-  .sidebar nav {
-    margin-bottom: 16px;
-  }
-  .sidebar nav ul li {
-    justify-content: center;
-  }
-  .sidebar nav ul li span {
-    display: none;
-  }
-
-  /* #3 quick-actions */
-  .quick-actions h3 {
-    display: none;
-  }
-  .quick-actions ul li {
-    padding: 8px;
-    justify-content: center;
-  }
-  .quick-actions ul li span {
-    display: none;
-  }
-  /* --------------------------------------------------------------- */
-  /* --------------------- finance-manager --------------------- */
-  main {
-    width: calc(100% - 80px);
-  }
-  /* --------------------- header --------------------- */
-}
-
-@media (min-width: 1024px) {
-}
-
-@media (min-width: 1280px) {
-  /* --------------------- sidebar --------------------- */
-  .sidebar {
-    width: 250px;
-    overflow-y: auto;
-  }
-  /* #1 icon & logo */
-  .sidebar .container .logo {
-    gap: 16px;
-  }
-  .sidebar .container .logo h1,
-  .sidebar .container .logo span {
-    display: block;
-  }
-
-  /* #2 navbar */
-  .sidebar nav {
-    margin-bottom: 32px;
-  }
-  .sidebar nav ul li {
-    justify-content: start;
-  }
-  .sidebar nav ul li span {
-    display: block;
-  }
-
-  /* #3 quick-actions */
-  .quick-actions h3 {
-    display: block;
-  }
-  .quick-actions ul li {
-    padding: 12px 16px;
-    justify-content: start;
-  }
-  .quick-actions ul li span {
-    display: block;
-  }
-  /* --------------------------------------------------------------- */
-  /* --------------------- finance-manager --------------------- */
-  main {
-    width: calc(100% - 250px);
-  }
-}
-
-@media (min-width: 1536px) {
+@media (max-width: 480px) {
 }
