--- a/css/media.css
+++ b/css/media.css
@@ -53,6 +53,10 @@
   main {
     width: 100%;
   }
+  /* --------------------- summary-cards --------------------- */
+  .summary-cards .container {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
 }
 
 @media (max-width: 568px) {
