--- a/css/style.css
+++ b/css/style.css
@@ -36,17 +36,68 @@ body {
 .bg-light-blue {
   background-color: #eaf3ff;
 }
+.bg-yellow {
+  background-color: #fef9c2;
+}
+.bg-orange {
+  background-color: #ffedd4;
+}
+.bg-purple {
+  background-color: #f3e8ff;
+}
+.bg-light-red {
+  background-color: #ffe2e2;
+}
+.bg-green2 {
+  background-color: #cefafe;
+}
+.bg-green {
+  background-color: #dbfce7;
+}
+.bg-blue {
+  background-color: var(--blue);
+}
+.bg-gray {
+  background-color: #e7e7e7;
+}
+.gray {
+  color: var(--gray);
+}
+.blue2 {
+  color: #1c398e;
+}
+.blue {
+  color: var(--blue);
+}
+.green2 {
+  color: #005f78;
+}
+.green {
+  color: var(--green);
+}
+.red {
+  color: red;
+}
+.purple {
+  color: #6e11b0;
+}
+.yellow {
+  color: #894b00;
+}
+.orang {
+  color: #ff6900;
+}
 /* ----------------------------------------------------------------- */
+/* tags */
 img {
   width: 100%;
-}
-.container {
-  width: 95%;
-  margin: auto;
 }
 header,
 section {
   margin: 24px 0;
+}
+td {
+  min-height: 80px;
 }
 /* ----------------------------------------------------------------- */
 /* font */
@@ -78,24 +129,12 @@ section {
 .w500 {
   font-weight: 500;
 }
-
-.gray {
-  color: var(--gray);
-}
-.blue {
-  color: var(--blue);
-}
-.green {
-  color: var(--green);
-}
-.red {
-  color: red;
-}
-.orang {
-  color: #ff6900;
-}
 /* ----------------------------------------------------------------- */
 /* classes */
+.container {
+  width: 95%;
+  margin: auto;
+}
 .flex {
   display: flex;
 }
@@ -114,6 +153,30 @@ section {
   padding: 24px;
   border-radius: 16px;
 }
+.Pill {
+  width: fit-content;
+  padding: 2px 8px;
+  border-radius: 50px;
+  display: flex;
+  gap: 4px;
+}
+.Pill .icon {
+  display: flex;
+  align-items: center;
+}
+.width100 {
+  width: 100%;
+  height: 8px;
+  border-radius: 50px;
+  margin-top: 8px;
+}
+.width80 {
+  width: 80%;
+  height: 8px;
+  border-radius: 50px;
+  margin-top: 8px;
+}
+
 /* ----------------------------------------------------------------- */
 /* --------------------- sidebar --------------------- */
 .dashboard {
@@ -353,7 +416,7 @@ header .container .user img {
   grid-template-columns: repeat(3, minmax(0px, 1fr));
   gap: 24px;
 }
-.summary-cards .container .card div{
+.summary-cards .container .card div {
   display: flex;
 }
 .summary-cards .container img {
@@ -437,6 +500,52 @@ header .container .user img {
   align-items: center;
   margin-bottom: 24px;
 }
+.dashboard-widgets .income-vs-expenses table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.dashboard-widgets .income-vs-expenses table .last {
+  border-bottom: none;
+}
+.dashboard-widgets .income-vs-expenses table img {
+  width: 16px;
+}
+.dashboard-widgets .income-vs-expenses table th {
+  text-align: start;
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--gray);
+  padding: 0px 8px 16px;
+  border-bottom: 1px solid #e7e7e7;
+}
+.dashboard-widgets .income-vs-expenses table td {
+  padding: 16px 8px;
+  border-bottom: 1px solid #e7e7e780;
+}
+.dashboard-widgets .income-vs-expenses table .iconText {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.dashboard-widgets .income-vs-expenses table .image {
+  width: 40px;
+}
+.dashboard-widgets .income-vs-expenses table .iconText .icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.dashboard-widgets .income-vs-expenses table .image img {
+  width: 100%;
+  border-radius: 50%;
+}
+.dashboard-widgets .income-vs-expenses table .text {
+  display: flex;
+  flex-direction: column;
+}
 /* bills */
 .dashboard-widgets .container .bills {
   grid-column: span 4;
@@ -487,4 +596,41 @@ header .container .user img {
 .dashboard-widgets .bills .items .item .text {
   display: flex;
   flex-direction: column;
+}
+/* budget-overview-card */
+.dashboard-widgets .container .budget {
+  grid-column: span 4;
+  grid-row: span 2;
+}
+.dashboard-widgets .budget .title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 24px;
+}
+.dashboard-widgets .budget .items {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+.dashboard-widgets .budget .items .item {
+  background-color: #eff5ff;
+  padding: 16px;
+  border: 1px solid #dbeafe;
+  border-radius: 16px;
+}
+.dashboard-widgets .budget .items .hover {
+  background-color: #fcfcfd;
+  border: 1px solid #ededed;
+  transition: 0.2s ease-in-out;
+}
+.dashboard-widgets .budget .items .hover:hover {
+  background-color: #f5f6f8;
+  border: 1px solid #ededed;
+  transform: translateY(-1px);
+  box-shadow: 0 4px 6px -1px #0000001a, 0 2px 4px -1px #0000000f;
+}
+.dashboard-widgets .budget .items .item div {
+  justify-content: space-between;
+  align-items: center;
 }
